# spindlebox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml
docs/: REPORTING.md  index.html
docs/evidence/: score-history.csv
docs/guide/: analysis.md  generating.md  housekeeping.md  index.md  languages.md  model.md  querying.md
findexer/: __init__.py  __main__.py  cli.py  ctxnorm.py  depmap.py  dispatch.py  registry.py  schema.py  sigclass.py  typenorm.py  validate.py
findexer/extract/: __init__.py  base.py  bash_lang.py  go_lang.py  js_lang.py  py_lang.py  rust_lang.py  ts_util.py
findexer/generate/: __init__.py  base.py  rust_backend.py
skill/: SKILL.md
slamface/: .env.example  Dockerfile  compose.yaml
slamface/harness/: corpus.lock.json  run_tier.py  runner.py  scoring.py  signatures.py  stages.py
slamface/ops/: common.py  deploy.sh  file_issues.py  harvest_logs.py  loop_once.py  provision.sh  report.py  slamface-deploy  status.sh  verify_fix.py
slamface/tests/: test_file_issues.py  test_harvest.py  test_loop_once.py  test_report.py  test_scoring.py  test_signatures.py  test_stages.py  test_verify_fix.py
spindlebox/: __init__.py  __main__.py  addresses.py  cli.py  ctxnorm.py  depmap.py  dispatch.py  gaps.py  registry.py  reporting.py  schema.py  sigclass.py  typenorm.py  validate.py  workflows.py
spindlebox/extract/: __init__.py  base.py  bash_lang.py  go_lang.py  js_lang.py  profile_lang.py  profile_registry.py  py_lang.py  rust_lang.py  ts_util.py
spindlebox/generate/: __init__.py  base.py  (+2 more)
tests/: test_addresses.py  test_cli.py  test_ctxnorm.py  test_depmap.py  test_dispatch.py  test_docs_examples.py  test_emit_profiles.py  test_extract_bash.py  test_extract_go.py  test_extract_java.py  test_extract_js.py  test_extract_python.py  test_extract_rust.py  test_gaps.py  test_generate_java.py  test_generate_rust.py  test_mixed.py  test_pipeline_dataflow.py  test_profile_walker.py  test_registry.py  test_reporting.py  test_schema.py  test_sigclass.py  test_typenorm.py  test_validate.py  test_workflows.py
(+31 files in other folders)
